--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build-sass":"sass --watch scss/index.scss css/translated.css"
+    "build-sass": "sass --watch scss/index.scss css/translated.css"
   },
   "repository": {
     "type": "git",
@@ -20,5 +20,8 @@
   "homepage": "https://github.com/Milker99/PreEntrega2-Agustin-Garcia#readme",
   "dependencies": {
     "sass": "^1.55.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.20"
   }
 }
